test/TestSuite/Scheduler/Errors/not_scheduled.tjp
project test "Test" "1.0" 2010-04-28 +1w

resource r "R"

task "Foo" {
# MARK: error 7 not_scheduled
  task bar "Bar" {
    start ${projectstart}
    effort 1d
    allocate r
    scheduled
  }
}
